<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--    出现在file中的四个文件 分别为动作组和动作的工作区的保存文件-->
    <string name="wholeWorkspace" translatable="false">whole_robot_workspace.xml</string>
    <string name="wholeWorkspaceTemp" translatable="false">whole_robot_workspace_temp.xml</string>
    <string name="singleWorkspace" translatable="false">single_robot_workspace.xml</string>
    <string name="singleWorkspaceTemp" translatable="false">single_robot_workspace_temp.xml</string>
    <!--    在BlocklyActivityHelper #resetBlockFactory #reloadToolbox中更改了代码 但因为不属于同一个包 因此不再引用 此处仅做记录-->
    <!--    从assets中读取动作组toolbox文件 以实现自定义blockly-->
    <string name="wholeAssetsToolbox" translatable="false">assets_whole/whole_robot_toolbox.xml</string>
    <!--    从assets中读取动作组json文件 系统自带的动作-->
    <string name="wholeAssetsJson" translatable="false">assets_whole/whole_robot_blocks_self.json</string>
    <!--    加载到file中的toolbox文件-->
    <string name="wholeFileToolbox" translatable="false">whole_file_toolbox.xml</string>
    <!--    加载到file中的json文件-->
    <string name="wholeFileBlocks" translatable="false">whole_file_blocks_self.json</string>
    <!--    记录结束-->
    <!--    系统自带动作组文件名 自动添加用于识别的字符串前缀-->
    <string name="wholexmlHeadAuto" translatable="false">autowholexml</string>
    <!--    用户新增动作组文件名 自动添加用于识别的字符串前缀-->
    <string name="wholexmlHead" translatable="false">wholexml</string>
    <!--    用户新增动作组文件名 用于补全文件名的字符串后缀-->
    <string name="wholexmlTail" translatable="false">.xml</string>
    <!--    系统自带动作文件名 自动添加用于识别的字符串前缀-->
    <string name="singlexmlHeadAuto" translatable="false">autosinglexml</string>
    <!--    用户新增动作文件名 自动添加用于识别的字符串前缀-->
    <string name="singlexmlHead" translatable="false">singlexml</string>
    <!--    用户新增动作文件名 用于补全文件名的字符串后缀-->
    <string name="singlexmlTail" translatable="false">.xml</string>
    <!--    添加到控制界面的编程程序 存储在shareperference中的文件名-->
    <string name="controlProgramSp" translatable="false">control_program</string>
    <!--    添加到控制界面的编程程序 存储在shareperference中的键值 后面还要加0-4中的一个数字表示顺序-->
    <string name="controlProgramKey" translatable="false">pro</string>
    <!--    打开预览界面传输文件名的key值-->
    <string name="previewKey" translatable="false">preview</string>
    <!--    动作和动作组Fragment界面打开到Activity界面传输文件名的key值-->
    <string name="fragment2ActivityKey" translatable="false">kind</string>
    <!-- language-English-->
    <string name="about">About</string>
    <string name="setting">Setting</string>
    <string name="preferences">Preferences</string>
    <string name="turnoffBluetooth">Turn off Bluetooth when exiting</string>
    <string name="btyes">Yes</string>
    <string name="btno">No</string>
    <string name="language">Language</string>
    <string name="lanAuto">Auto</string>
    <string name="developmentOptions">Development options</string>
    <string name="developyes">Yes</string>
    <string name="developno">No</string>
    <string name="developer">Run this project as developer</string>
    <string name="btShake">Please turn on Bluetooth and location\nShake the mobile phone, Bluetooth will connect automatically</string>
    <string name="btConnected">Connected</string>
    <string name="btDisconnect">Disconnect</string>
    <string name="btRename">Rename XGO</string>
    <string name="selectDevice">Select the device to connect</string>
    <string name="searching">SEARCHING… Please be Patient. \nIf you cannot connect after several attempts, try restarting the robot.</string>
    <string name="normal">Normal</string>
    <string name="superior">Advanced</string>
    <string name="executing">Executing</string>
    <string name="calibration">Calibrate</string>
    <string name="calibrationMode">Calibrate</string>
    <string name="calibrated">Calibrated</string>
    <string name="leg">Foot Position Utility</string>
    <string name="reset">default</string>
    <string name="leftforeleg">left front </string>
    <string name="rightforeleg">right front </string>
    <string name="righthindleg">right rear </string>
    <string name="lefthindleg">left rear </string>
    <string name="motor">Servo Calibration Utility</string>
    <string name="top">Upper</string>
    <string name="middle">Middle</string>
    <string name="Bottom">Lower</string>
    <string name="actionGroup">ActionGroup</string>
    <string name="action">Action</string>
    <string name="recordtick">record</string>
    <string name="uninstall">uninstall</string>
    <string name="recovery">recovery</string>
    <string name="viewAngle">view angle</string>
    <string name="teachingModel">TeachMode</string>
    <string name="hexadecimal">Hexadecimal input, 0x is not required :Addr+Order</string>
    <string name="noResponseWrite">No response write</string>
    <string name="responseWrite">Reponse write</string>
    <string name="readData">Read Data</string>
    <string name="mdefault">default</string>
    <string name="mcustom">custom</string>
    <string name="setText">Set text:</string>
    <string name="inputText">Input your text</string>
    <string name="connectnow">Connect now</string>
    <string name="presentproject">Present project</string>
    <string name="myProject">My project</string>
    <string name="morefc">Enhanced Options</string>
    <string name="autoPowerOn">Auto Power On</string>
    <string name="carousel">Perform All</string>
    <string name="liedown">lie down</string>
    <string name="standup">stand up</string>
    <string name="crawl">crawl</string>
    <string name="turnAround">turn 360°</string>
    <string name="marktime">mark time</string>
    <string name="squat">squat</string>
    <string name="turnroll">turn roll</string>
    <string name="turnpitch">turn pitch</string>
    <string name="turnyaw">turn yaw</string>
    <string name="threeAxis">3 axis motion</string>
    <string name="pee">pee</string>
    <string name="sitdown">sit down</string>
    <string name="stretch">stretch</string>
    <string name="wavehand">wave (hand)</string>
    <string name="wavebody">wave (body)</string>
    <string name="swing">wave (side)</string>
    <string name="pray">pray</string>
    <string name="lookingfood">Looking for food</string>
    <string name="handshake">handshake</string>
    <string name="pushup">Push_up</string>
    <string name="chickenhead">Chicken head</string>
    <string name="naughty">Naughty</string>
    <string name="dance">Dance</string>
    <string name="seek">Seek</string>
    <string name="actor">Performance Mode</string>
    <string name="xyz">XYZ-axis</string>
    <string name="pry">Roll/Pitch/Yaw</string>
    <string name="battery">Battery</string>
    <string name="speed">Speed</string>
    <string name="resetheight">Reset Height</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="gyroscopeOn">on</string>
    <string name="gyroscopeOff">off</string>
    <string name="motion">Motion</string>
    <string name="lowspeed">low</string>
    <string name="normalspeed">normal</string>
    <string name="highspeed">high</string>
    <string name="privacy_policy">" "</string>
    <string name="updatehex">Update hex</string>
    <string name="updatehexbtn">update</string>
    <string name="hexversion">Latest version 2.3.3</string>
    <string name="rename">Rename Your Robot</string>
    <string name="only_supports_english_and_numbers">Only_supports_English_and_Numbers</string>
    <string name="confim">change name</string>
    <string name="cancel">cancel</string>
    <string name="renameText">Your Robot’s Name can have up to 4 Chinese or 13 English Characters</string>
    <string name="all_rights_reserved">Luwu Dynamics. All Rights Reserved.</string>
    <!--index-->
    <string name="index_pleasechose">请选择您的设备:</string>
    <string name="wifilist_seach">Scaning...</string>
    <!--main-->
    <string name="performance">Performance Mode</string>
    <string name="control">Radio Controll Mode</string>
    <string name="aimodule">AI模组</string>
    <string name="ip_input">Please enter IP address of the robot</string>
    <string name="ip_input_wifi">Please enter SSID and password</string>
    <string name="zhuaqu">Grab</string>
    <string name="connect">Confirm</string>
    <string name="get_code">get QR code</string>
    <string name="motion_mode">Motion Mode</string>
    <string name="pose_mode">Pose Mode</string>
    <string name="X_axistranslation">X-axis translation</string>
    <string name="Y_axistranslation">Y-axis translation</string>
    <string name="Z_axistranslation">Z-axis translation</string>
    <string name="roll">Roll</string>
    <string name="pitch">Pitch</string>
    <string name="yaw">Yaw</string>

    <string name="autostable">Auto stable</string>
    <string name="frequency">Frequency</string>
    <string name="height">Height</string>
    <string name="xgostep">Step</string>
    <string name="baseset">Setting</string>
    <string name="xgolanguage">Language</string>
    <string name="flowsys">Auto</string>
    <string name="chinese">中文</string>
    <string name="english">English</string>
    <string name="japanese">日本語</string>
    <string name="devdesc">Run this project as developer</string>
    <string name="devoptions">Development options</string>
    <string name="deviceinfo">Device Information</string>
    <string name="debugdesc_1">Click [Calibrate] put the robot to the calibration position according to the instructions</string>
    <string name="debugdesc_2">Click [Calibrated] record the current calibration posture as the initial position, the robot will be the default state after 10 seconds</string>
    <string name="Confirm">Confirm</string>
    <string name="mode_debug">Calibration Mode</string>
    <string name="speed_low">Low</string>
    <string name="speed_medium">Normal</string>
    <string name="speed_high">High</string>
    <string name="scan_please">Please scan the QR code.</string>
    <string name="lan_zh" translatable="false">Chinese</string>
    <string name="lan_en" translatable="false">English</string>
    <string name="lan_jp" translatable="false">Japanese</string>
    <string name="version" translatable="false">version 2.3.3</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
</resources>