<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="789dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bottom_blue14"
        android:orientation="vertical"
        android:paddingLeft="36dp"
        android:paddingTop="31dp"
        android:paddingRight="29dp"
        android:paddingBottom="47dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debugdesc_1"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/debugdesc_2"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/debug_confirm_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="28dp"
            android:layout_marginRight="36dp"
            android:background="@drawable/bg_text_blue"
            android:paddingLeft="54dp"
            android:paddingTop="17dp"
            android:paddingRight="54dp"
            android:paddingBottom="17dp"
            android:text="@string/Confirm"
            android:textColor="@color/white"
            android:textSize="34sp" />
    </LinearLayout>

</RelativeLayout>