<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="640dp"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    android:gravity="center">
    <LinearLayout
        android:layout_width="2000dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="100dp"
        android:layout_gravity="center"

        android:background="@drawable/ble_items_save_linearlayout_bg"

        android:orientation="vertical"
        android:scrollbars="vertical">


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/rename"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/items_new_name"
            android:hint="@string/renameText"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:background="@drawable/ble_items_edit_bg"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:singleLine="true"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/confirm_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ble_items_save_confim_bg"
                android:text="@string/confim"
                android:textColor="#05c181"
                android:textSize="16sp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="50dp"
                />


            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ble_items_save_cancel_bg"
                android:text="@string/cancel"
                android:textColor="#777777"
                android:textSize="16sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="50dp"
                />

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="85dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitCenter"
        android:src="@drawable/items_close"

        />
</RelativeLayout>