<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".mActivity.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tab2"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="82dp"
            android:layout_height="match_parent"
            android:gravity="left">

            <ImageButton
                android:id="@+id/aboutBtnBack"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="17dp"
                android:background="#00000000"
                android:scaleType="centerInside"
                android:src="@drawable/back" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginRight="82dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:text="@string/about"
                android:textColor="#ffffff"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:gravity="bottom|center"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="25sp"
            android:textColor="#ffffff"
            android:gravity="top|center"
            android:text="@string/version"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:gravity="bottom|center"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/privacyPolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/blue"
                android:gravity="bottom|center"
                android:layout_margin="5dp"
                android:clickable="true"
                android:text="@string/privacy_policy"
                android:focusable="true" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textSize="20sp"
                android:textColor="#ffffff"
                android:gravity="bottom|center"
                android:text="@string/all_rights_reserved"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>