<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mActivity.TestBtActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hexadecimal"
        android:gravity="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">
        <com.luwu.xgo_robot.mView.SpaceEditText
            android:id="@+id/testWriteEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffff99"
            android:textSize="25sp"
            android:imeOptions="flagNoExtractUi"/>
        <Button
            android:id="@+id/testWriteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/noResponseWrite"
            android:enabled="false"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">
        <TextView
            android:id="@+id/testWriteRespondTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#CCCCCC"
            android:textSize="25sp"
            android:layout_marginBottom="5dp"/>
        <com.luwu.xgo_robot.mView.SpaceEditText
            android:id="@+id/testWriteRespondEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffff99"
            android:textSize="25sp"
            android:imeOptions="flagNoExtractUi"/>
        <Button
            android:id="@+id/testWriteRespondBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/responseWrite"
            android:enabled="false"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">
        <TextView
            android:id="@+id/testReadTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#CCCCCC"
            android:textSize="25sp"
            android:layout_marginBottom="5dp"/>
        <com.luwu.xgo_robot.mView.SpaceEditText
            android:id="@+id/testReadEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffff99"
            android:textSize="25sp"
            android:imeOptions="flagNoExtractUi"/>
        <Button
            android:id="@+id/testReadBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/readData"
            android:enabled="false"/>
    </LinearLayout>

</LinearLayout>